<resources>
    <string name="app_name">Students-List</string>
    <string name="student_name">Student Name</string>
    <string name="id">ID</string>
    <string name="New_Student_Title">Add New Student</string>
    <string name="student_id">Student ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
</resources>