<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/New_Student_Title" />
        <ImageView
            android:id="@+id/studentImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/default_avatar"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:hint="@string/student_id"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:hint="@string/phone"/>

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:paddingVertical="30dp"
            android:hint="@string/address"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            >
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
